tests/NormalTests/paczka1/fuzzy1/89358305.err
Error in line 5: AGobfxvZ A596 0,6
Error in line 20: A310 A310 63,7
Error in line 27: kEn S777 92,1
Error in line 40: rjKE5 A310 -6,4
